Sun May 22 08:57:13 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_asn1.c: Default tag lookup in constant time via hash
	instead of previous linear algorithm.
	[Ruby 1.9 - Feature #4309][ruby-core:34813]

Sun May 22 07:54:16 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_digest.c: Explain DSS and DSS1 in documentation.

Sun May 22 07:10:25 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_pkey_dsa.rb: Add tests for sign/verify.

Sun May 22 06:07:17 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_x509cert.rb: Merge DSA-related tests from ruby_1_8
	branch.

Sun May 22 04:11:12 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (Init_Thread): add a code comment why the meaningless
	  line is necessary.

Sun May 22 01:35:12 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: modified documentation.

Sat May 21 22:46:26 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_strftime(date_strftime_with_tmx): "%v" means "%e-%b-%Y".

Sat May 21 22:14:35 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (rb_io_extract_modeenc): accept combination hash and
	  File::Constants. (eg. File.open('yo', :mode => File::WRONLY))
	  [Feature #4742][ruby-core:36338]
	* test/ruby/test_io.rb (TestIO#test_open_mode): new test.

Sat May 21 21:44:14 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* test/date/test_switch_hitter.rb: new.

Sat May 21 21:18:29 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_{core,parse}.c: moved nearly all core code from ext/date/lib.
	* ext/date/lib/{date,date/format}.rb: removed nearly all code.

Sat May 21 02:58:46 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/.document:  Add curses to documented extensions.
	* ext/curses/curses.c:  Improve documentation.  Patch by Vincent Batts.
	  [Ruby 1.9 - Bug #4747]

Sat May 21 02:51:01 2011  Eric Hodel  <drbrain@segment7.net>
